--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-table": "^8.21.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/node": "^24.5.2",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "class-variance-authority": "^0.7.1",
@@ -22,7 +27,9 @@
     "react-scripts": "5.0.1",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.8",
-    "web-vitals": "^2.1.4"
+    "typescript": "^5.9.2",
+    "web-vitals": "^2.1.4",
+    "zod": "^4.1.11"
   },
   "scripts": {
     "start": "react-scripts start",
