--- a/client/package.json
+++ b/client/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "app-technical-test-source",
+  "name": "client2",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-table": "^8.21.3",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/node": "^24.5.2",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.126",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "class-variance-authority": "^0.7.1",
@@ -20,14 +23,14 @@
     "install": "^0.13.0",
     "lucide-react": "^0.544.0",
     "npm": "^11.6.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-hook-form": "^7.63.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.8",
-    "typescript": "^5.9.2",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "zod": "^4.1.11"
   },
@@ -57,5 +60,26 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.4.1"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx,ts,tsx}",
+      "!<rootDir>/node_modules/",
+      "!src/components/"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 90,
+        "functions": 90,
+        "lines": 90,
+        "statements": 90
+      }
+    },
+    "coverageReporters": [
+      "text"
+    ],
+    "snapshotSerializers": [
+      "my-serializer-module"
+    ]
   }
 }
