--- a/server/app/env.toml
+++ b/server/app/env.toml
@@ -1,7 +1,7 @@
 [development]
 # POSTGRES DB
-DB_USER="hercule"
-DB_NAME="hercule"
+DB_USER="descartes"
+DB_NAME="descartes"
 DB_PASSWORD="dummypassword"
 DB_PORT= 5432
 DB_HOST= "postgres-db1"
