Update lock file

--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "dynaconf>=3.2.11",
     "email-validator>=2.3.0",
     "fastapi[standard]>=0.117.1",
+    "httpx>=0.28.1",
     "psycopg2-binary>=2.9.10",
+    "pytest>=8.4.2",
     "sqlmodel>=0.0.25",
 ]
